--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "jade": "~1.6.0",
-    "sequelize-cli": "~0.3.3"
+    "sequelize-cli": "~0.3.3",
+    "sequelize": "~2.0.0-rc1"
   }
 }
