--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.0.0",
     "jade": "~1.6.0",
     "sequelize-cli": "~0.3.3",
-    "sequelize": "~2.0.0-rc1"
+    "sequelize": "~2.0.0-rc1",
+    "underscore": "~1.7.0"
   }
 }
