--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.6.0",
     "sequelize-cli": "~0.3.3",
     "sequelize": "~2.0.0-rc1",
-    "underscore": "~1.7.0"
+    "underscore": "~1.7.0",
+    "express-session": "~1.9.2"
   }
 }
