initial mocha tests

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sequelize": "~2.0.0-rc1",
     "underscore": "~1.7.0",
     "express-session": "~1.9.2",
-    "q": "~1.1.2"
+    "q": "~1.1.2",
+    "superagent": "~0.21.0"
   }
 }
