--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "underscore": "~1.7.0",
     "express-session": "~1.9.2",
     "q": "~1.1.2",
-    "superagent": "~0.21.0"
+    "superagent": "~0.21.0",
+    "pg": "~4.1.0"
   }
 }
