--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "~1.9.2",
     "q": "~1.1.2",
     "superagent": "~0.21.0",
-    "pg": "~4.1.0"
+    "pg": "~4.1.0",
+    "ejs": "~1.0.0"
   }
 }
