switched to cookie based sessions

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "q": "~1.1.2",
     "superagent": "~0.21.0",
     "pg": "~4.1.0",
-    "ejs": "~1.0.0"
+    "ejs": "~1.0.0",
+    "cookie-session": "~1.1.0"
   }
 }
