--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "superagent": "~0.21.0",
     "pg": "~4.1.0",
     "ejs": "~1.0.0",
-    "cookie-session": "~1.1.0"
+    "cookie-session": "~1.1.0",
+    "sendgrid": "~1.4.0"
   }
 }
