--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg": "~4.1.0",
     "ejs": "~1.0.0",
     "cookie-session": "~1.1.0",
-    "sendgrid": "~1.4.0"
+    "sendgrid": "~1.4.0",
+    "node-uuid": "~1.4.2"
   }
 }
