--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "~1.0.0",
     "cookie-session": "~1.1.0",
     "sendgrid": "~1.4.0",
-    "node-uuid": "~1.4.2"
+    "node-uuid": "~1.4.2",
+    "aws-sdk": "~2.1.2"
   }
 }
