--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "schoolcraig_js",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "0.10.35",
+    "npm": "2.1.x"
+  },
   "scripts": {
     "start": "node ./bin/www"
   },
