--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cookie-session": "~1.1.0",
     "sendgrid": "~1.4.0",
     "node-uuid": "~1.4.2",
-    "aws-sdk": "~2.1.2"
+    "aws-sdk": "~2.1.2",
+    "async": "~0.9.0"
   }
 }
