--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "schoolcraig_js",
+  "name": "bazaar",
   "version": "0.0.0",
   "private": true,
   "engines": {
@@ -29,5 +29,11 @@
     "node-uuid": "~1.4.2",
     "aws-sdk": "~2.1.2",
     "async": "~0.9.0"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-contrib-cssmin": "~0.11.0",
+    "grunt-contrib-uglify": "~0.7.0",
+    "grunt-contrib-jshint": "~0.11.0"
   }
 }
