--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "sendgrid": "~1.4.0",
     "node-uuid": "~1.4.2",
     "aws-sdk": "~2.1.2",
-    "async": "~0.9.0"
+    "async": "~0.9.0",
     "grunt": "~0.4.5",
     "grunt-contrib-cssmin": "~0.11.0",
     "grunt-contrib-uglify": "~0.7.0",
