--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt": "~0.4.5",
     "grunt-contrib-cssmin": "~0.11.0",
     "grunt-contrib-uglify": "~0.7.0",
-    "grunt-contrib-jshint": "~0.11.0"
+    "grunt-contrib-jshint": "~0.11.0",
+    "pg-hstore": "~2.3.1"
   }
 }
