--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "sequelize-cli": "~0.3.3",
-    "sequelize": "~2.0.0-rc1",
+    "sequelize": "~2.0.4",
     "underscore": "~1.7.0",
     "express-session": "~1.9.2",
     "q": "~1.1.2",
@@ -33,6 +33,7 @@
     "grunt-contrib-cssmin": "~0.11.0",
     "grunt-contrib-uglify": "~0.7.0",
     "grunt-contrib-jshint": "~0.11.0",
-    "pg-hstore": "~2.3.1"
+    "pg-hstore": "~2.3.1",
+    "geoip-lite": "~1.1.5"
   }
 }
