--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pg-hstore": "~2.3.1",
     "geoip-lite": "~1.1.5",
     "moment": "~2.10.0",
-    "grunt-browserify": "~3.6.0"
+    "grunt-browserify": "~3.6.0",
+    "numeral": "~1.5.3"
   }
 }
